# CrossPlat

./: .gitignore  CMakeLists.txt  Makefile  defs.cpp  defs.h  link_tool.cpp  link_tool.h  mem_base.cpp  mem_base.h  platform_base.cpp  platform_base.h  socket_base.cpp  socket_base.h  stdafx.h  string_base.cpp  string_base.h
CrossPlat/: CrossPlat.sln  CrossPlat.vcxproj  CrossPlat.vcxproj.filters  ReadMe.txt  stdafx.cpp
